# ProjectEuler

./: .Rbuildignore  DESCRIPTION  LICENSE  README.md  package-lock.json  package.json  setup.py
R/: DESCRIPTION  LICENSE.md  README.md  problem001.R  problem002.R  problem004.R  problem006.R  problem007.R  problem011.R  problem012.R  problem017.R  problem020.R  problem022.R  problem024.R  utils.R
project_euler/: __init__.py  problem001.py  problem002.py  problem003.py  problem004.py  problem005.py  problem006.py  problem007.py  problem008.py  problem009.py  problem010.py  problem011.py  problem012.py  problem013.py  problem014.py  problem015.py  problem016.py  problem017.py  (+6 more)
python/: .gitignore  README.md  pyproject.toml
python/src/project_euler/: problem001.py  problem002.py  problem003.py  problem004.py  problem005.py  problem007.py  problem008.py  problem010.py  problem012.py  problem013.py  problem015.py  problem016.py  problem018.py  problem019.py  problem020.py  problem021.py  problem022.py  problem023.py  problem024.py  problem025.py
python/src/project_euler/utils/: big_arithmetic.py  number_theory.py
python/tests/: test_performance.py  test_problem001.py  test_problem002.py  test_problem003.py  test_problem006.py  test_problem007.py  test_problem009.py  test_problem010.py  test_problem011.py  test_problem012.py  test_problem013.py  test_problem014.py  test_problem015.py  test_problem017.py  test_problem018.py  test_problem020.py  test_problem021.py  test_problem022.py  test_problem023.py  test_utils.py
python/tests/utils/: test_big_arithmetic.py
(+89 files in other folders)
