[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_euler"
version = "0.0.1"
authors = [
  { name="Price Hardman", email="PriceHardman@gmail.com" },
]
description = "Project Euler in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PriceHardman/ProjectEuler.py"
"Bug Tracker" = "https://github.com/PriceHardman/ProjectEuler.py/issues"

[tool.pytest.ini_options]
pythonpath = "src"